Fase I/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonm1-ingress
  namespace: saf1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE"
spec:
  ingressClassName: nginx
  rules:
  - host: saf1.35.192.41.172.nip.io
    http:
      paths:
      - path: "/pythonm1(/|$)(.*)"  # Reescribe después de /pythonm1
        pathType: Prefix
        backend:
          service:
            name: pythonm1-service
            port:
              number: 80
      # - path: "/pythonm3(/|$)(.*)"
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: pythonm3-service
      #       port:
      #         number: 80
      # - path: "/nodem4(/|$)(.*)"
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: nodem4-service
      #       port:
      #         number: 80
      # - path: "/gom5(/|$)(.*)"
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: gom5-service
      #       port:
      #         number: 80
      - path: "/gom2(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: gom2-service
            port:
              number: 80
